Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3044

Fix admission control default value for max requests

    XMLWordPrintableJSON

Details

    Description

      The default value for the pool configuration 'max requests' is currently an arbitrary 200. We have found that any value may end up being problematic due to the behavior of some clients (i.e. Hue and those that behave similarly) which may leave queries open for a long time, especially in combination with IMPALA-1575.

      In C5.7/CM5.7, we will steer more users towards using admission control, and the most basic configurations should be the most permissive to avoid issues for new AC users.

      In the future when we can make true memory reservations and better estimates, we can have default policies that throttle based on those instead.

      This is a tiny change to a few constants and tests.

      Attachments

        Activity

          People

            mjacobs Matthew Jacobs
            mjacobs Matthew Jacobs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: