IMPALA-3044: Fix admission control default max requests

The default value for the pool configuration 'max requests'
is currently an arbitrary 200. We have found that any value
may end up being problematic due to the behavior of some
clients (i.e. Hue and those that behave similarly) which may
leave queries open for a long time, especially in
combination with IMPALA-1575.

In 5.7, we will steer more users towards using admission
control, and the most basic configurations should be the
most permissive to avoid issues for new AC users. In the
future when we can make true memory reservations and better
estimates, we can have default policies that throttle based
on those instead.

Change-Id: Ib66b0e9f185fa483ae2c234a96c33a71b66ac94e
Reviewed-on: http://gerrit.cloudera.org:8080/2259
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins